Version 0.11.2
==============

Released ????, ????

- Poland fix #464 (m-ganko)
- Singapore updates for 2022 #456 (mborsetti)
- .gitignore fix #462 (TheLastProject)
- Pre-commit v.2.0.3 (dr-p)

Version 0.11.1
==============

Released April 2, 2021

- Github Actions CI/CD integration (s-weigand, dr-p)
- Support for Saudi Arabia #429 (OsaydAbdu)
- Support for Curacao #431 (RaychelM, dr-p)
- Support for Jamaica #433 (edyarm, dr-p)
- Support for Georgia #435 (Okroshiashvili, dr-p)
- __init.py__ flake8 issue fix #423 (dr-p)
- Korea 2020 fix #414, #415 (dr-p, janggiKim, spar7453)
- Singapore fix for multi-year #419 (mborsetti)
- Israel fix #442 (giladmaya)
- Japan fix #445 (osoken)
- Serbia fix #446 (kosugor)
- United Kingdom get_list fix #448 (bletham)
- Singapore fix for multi-year #419 (mborsetti)
- Fixed holidays pickling #451 (giladmaya)


Version 0.10.5.2
================

Released February 4, 2021

- Dropped support for Python 2 (dr-p)
- Removed convertdate<=2.2.0 constraint (dr-p)
- Travis CI integration review (dr-p)
- Support for Mozambique (jusce17)
- Angola fixes (jusce17)
- Portugal localized holidays (jusce17)
- Disable year expansion on name search #411 (giladmaya)
- Israel fixes (new convertdate version) #407 (giladmaya)
- Ireland fixes (ISO-2 code, partial split from UK) #417 (javicalle)
- Honduras fix (ISO-2 code) #405 (dr-p, agorajek)


Version 0.10.4
==============

Released December 6, 2020

- Dropped support for Python 3.5
- Support for Djibouti (Abdisamade)
- Support for United Arab Emirates (marcomasulli, mborsetti)
- Support for Chile (mborsetti, dr-p)
- Support for Angola (jusce17, pietervdw115, dr-p)
- Support for Malawi (pietervdw115)
- Support for Bangladesh (dr-p, tasnimislam)
- Korea fixes (MYUNGJE, dr-p, hiddentrap)
- Australia 2020 fix (bencollerson, trauty-is-me)
- Croatia fixes and updates (jangrg, mborsetti, dr-p)
- United States fixes (raffg, bgmiles, dr-p)
- UK fixes/improvements (dr-p, richard-kunert, emreay-)