@@ -3,6 +3,7 @@ Version 0.11.2
 
 Released ????, ????
 
+- Support for Venezuela #470 (antusystem, dr-p)
 - Poland fix #464 (m-ganko)
 - Singapore updates for 2022 #456 (mborsetti)
 - .gitignore fix #462 (TheLastProject)
